objects/Role_sur_le_Contrat__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Role sur le Contrats</relationshipLabel>
        <relationshipName>Role_sur_le_Contrats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contrat__c</fullName>
        <label>Contrat</label>
        <referenceTo>Contrats__c</referenceTo>
        <relationshipLabel>Role sur le Contrats</relationshipLabel>
        <relationshipName>Role_sur_le_Contrats</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Souscripteur__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Contrat__r.Subscriptor__c, Contrat__r.Subscriptor__r.FirstName &amp; &quot; &quot; &amp; Contrat__r.Subscriptor__r.LastName, &quot;_parent&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Souscripteur</label>
        <type>Text</type>
    </fields>
    <label>Role sur le Contrat</label>
    <nameField>
        <displayFormat>ROLE-{0}</displayFormat>
        <label>Role sur le Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Role sur le Contrats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>